[gd_scene load_steps=3 format=3 uid="uid://cqexvs24d08xt"]

[ext_resource type="Script" path="res://structures/tower.gd" id="1_kpmke"]
[ext_resource type="PackedScene" uid="uid://cb37crbgke0w" path="res://structures/structure.tscn" id="2_f231q"]

[node name="tower" type="Node2D"]
script = ExtResource("1_kpmke")

[node name="dungeon" parent="." instance=ExtResource("2_f231q")]
modulate = Color(0, 0, 0.392157, 1)
team = "player"

[node name="upgrade_menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="spawner_shop" type="OptionButton" parent="upgrade_menu"]
layout_mode = 0
offset_right = 14.0
offset_bottom = 20.0
item_count = 2
popup/item_0/text = "+guards"
popup/item_0/id = 0
popup/item_1/text = "+soldiers"
popup/item_1/id = 1

[connection signal="item_selected" from="upgrade_menu/spawner_shop" to="." method="_on_spawner_shop_item_selected"]
